tests/machine/x/fs/group_by_join.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/group_by_join.fs(8,84): error FS0010: Unexpected symbol ']' in expression. Expected '->' or other token.
